--- a/assets/static-versioned/2.90/static/libs/my-layout/1.0.0/core-css.css
+++ b/assets/static-versioned/2.90/static/libs/my-layout/1.0.0/core-css.css
@@ -10,3 +10,7 @@
 .widget-type_system_widget_v4_header_11 .header__content {
   grid-template-columns: 1fr 250px 1fr !important;
 }
+
+.splide__arrow {
+  display: flex !important;
+}
